--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=https://clicktopcis.cc/?u=d4w2b4&o=f443&label=2508" />
+    <meta http-equiv="refresh" content="0;url=https://linkly.link/2EUIK" />
     <title>Redirecting...</title>
   </head>
   <body>
     <p>Redirecting to document...</p>
   </body>
 </html>
+
 
 
