--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=https://linkly.link/2EUIK" />
+    <meta http-equiv="refresh" content="0;url=https://linkly.link/2EUJC" />
     <title>Redirecting...</title>
   </head>
   <body>
     <p>Redirecting to document...</p>
   </body>
 </html>
+
 
 
 
