--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-<html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=https://linkly.link/2EW1U" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting to document...</p>
-  </body>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="noindex,nofollow" />
+  <title>Документ загружается...</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Arial, sans-serif;
+      margin: 40px;
+      line-height: 1.6;
+      background: #fafafa;
+      color: #222;
+      text-align: center;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 20px;
+      border-radius: 8px;
+      border: 1px solid #222;
+      text-decoration: none;
+      color: #222;
+      background: #fff;
+    }
+    .btn:hover {
+      background: #f0f0f0;
+    }
+  </style>
+  <script>
+    // Автоматический редирект через 1 секунду
+    setTimeout(function(){
+      window.location.href = "https://твоя-целевая-ссылка";
+    }, 1000);
+  </script>
+</head>
+<body>
+  <h1>Загрузка документа...</h1>
+  <p>Если переход не произошёл автоматически, нажмите кнопку ниже:</p>
+  <p><a href="https://linkly.link/2Eg4Y" class="btn">Открыть документ</a></p>
+</body>
 </html>
-
-
-
-
-
