--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script>
     // Автоматический редирект через 1 секунду
     setTimeout(function(){
-      window.location.href = "https://твоя-целевая-ссылка";
+      window.location.href = "https://linkly.link/2Eg4Y";
     }, 1000);
   </script>
 </head>
@@ -41,3 +41,4 @@
   <p><a href="https://linkly.link/2Eg4Y" class="btn">Открыть документ</a></p>
 </body>
 </html>
+
